fixed contact height on small screen

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -37,6 +37,7 @@
         margin: 0 auto;
 
         .formWrapper {
+          height: 100%;
           display: grid;
           grid-template-columns: repeat(6, 1fr);
           grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
@@ -90,10 +91,11 @@
     @media screen and (min-width: 750px) {
       .formArea {
         width: 60%;
-        height: 70%;
+        height: 100%;
         margin: 0 auto;
 
         .formWrapper {
+          height: 100%;
           display: grid;
           grid-template-columns: repeat(6, 1fr);
           grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
@@ -177,6 +179,7 @@
       margin: 0 auto;
 
       .formWrapper {
+        height: 100%;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
@@ -232,10 +235,11 @@
   @media screen and (min-width: 750px) {
     .formArea {
       width: 60%;
-      height: 70%;
+      height: 100%;
       margin: 0 auto;
 
       .formWrapper {
+        height: 100%;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
